--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,14 @@
 body {
   padding: 0;
   margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#todos-section {
+  border: 1px solid #555;
+  padding: 2rem;
+  border-radius: 10px;
 }
